kubernetes/infra/old/base/configs/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - keycloak-base.home.parents-basement.win
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8080
